# ggpk-explorer

./: .gitignore  Cargo.toml  README.md  build.rs  probe_ggpk.py
.github/workflows/: release.yml
assets/: ggpk-explorer.desktop
assets/skilltree/: nodes_compact.json  skills_compact.json
src/: export.rs  main.rs  settings.rs  update.rs
src/adapters/: mod.rs
src/bundles/: bundle.rs  cdn.rs  index.rs  mod.rs  path_enrichment.rs  steam.rs
src/dat/: mod.rs  psg.rs  reader.rs  schema.rs
src/ggpk/: reader.rs
src/parsers/: fmod_bank.rs  fxgraph.rs  graphics.rs  mod.rs  skeletal.rs  text_config.rs  types.rs  utils.rs
src/ui/: app.rs  chrome.rs  command_palette.rs  content_view.rs  dat_viewer.rs  export_window.rs  fxgraph_viewer.rs  graphics_viewer.rs  json_viewer.rs  mod.rs  psg_viewer.rs  settings_window.rs  sidebar.rs  skeletal_viewer.rs  status_bar.rs  syntax.rs  text_config_viewer.rs  texture_loader.rs  theme.rs  tree_view.rs
src/ui/components/: badge.rs  button.rs  card.rs  input.rs  mod.rs
